[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "wata-tsugarian",email = "wata.tsugarian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "slack-bolt (>=1.22.0,<2.0.0)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"